# Battleships

./: CMakeLists.txt  Dockerfile  README.md
sql/: 001_init.sql
src/: App.cpp  DatabaseComponent.hpp
src/buisness-logic/: Column.hpp  Coordinate.cpp  Coordinate.hpp  CoordinateLine.cpp  CoordinateLine.hpp  GameplayController.cpp  GameplayController.hpp  GuessController.cpp  GuessController.hpp  LowerBoard.cpp  LowerBoard.hpp  OpponentBoard.cpp  OpponentBoard.hpp  Orientation.hpp  Peg.hpp  PlayerData.cpp  PlayerData.hpp  PlayerShipStore.cpp  PlayerShipStore.hpp  PlayerShips.cpp  PlayerShipsBoard.cpp  PlayerShipsBoard.hpp  Row.hpp  SessionManager.cpp  SessionManager.hpp  Ship.cpp  Ship.hpp  UpperBoard.cpp  UpperBoard.hpp
src/controller/: GameController.hpp  GameManagementController.hpp  SessionManagementAPI.hpp  SessionManagementController.hpp  SessionManagementService.cpp  SessionManagementService.hpp  StaticResourcesAPI.hpp
src/db/: GameDb.hpp  GameStateDbClient.hpp
src/dto/: AddPlayerDto.hpp  GameDto.hpp  GameRestartDto.hpp  PageDto.hpp  PlaceShipsDto.hpp  PlayerDto.hpp  PlayerGuessDto.hpp  PlayerShipPositionsDto.hpp  SessionSummaryDto.hpp  ShipPlacementDto.hpp  ShipPositionDto.hpp  TurnGuessDto.hpp
src/service/: GameManagementService.cpp  GameManagementService.hpp  GameService.cpp  GameService.hpp  PlayerService.cpp  PlayerService.hpp  SessionManagementService.cpp  SessionManagementService.hpp  UserService.hpp
utility/: install-oatpp-modules.sh
